--- a/home2.html
+++ b/home2.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="home2.css">
 </head>
 <body>
+<!-- Preloader -->
+<div id="preloader">
+  <div class="spinner"></div>
+</div>
 
 <!-- ================= HEADER ================= -->
 <header class="header">
@@ -20,25 +24,25 @@
     <div class="close-menu">&times;</div>
     <!-- <a href="#">Home</a> -->
     <div class="dropdown">
-      <a href="#" class="dropbtn">Home ▼</a>
+      <a href="index.html" class="dropbtn">Home ▼</a>
       <div class="dropdown-content">
-        <a href="#">Home page1</a>
+        <a href="index.html">Home page1</a>
         <!-- <a href="#">Services</a>
         <a href="#">Contact</a> -->
       </div>
     </div>
-    <a href="#">Events</a>
-    <a href="#">Portfolio</a>
-    <a href="#">Blog</a>
+    <a href="404.html">Events</a>
+    <a href="404.html">Portfolio</a>
+    <a href="404.html">Blog</a>
     <div class="dropdown">
-      <a href="#" class="dropbtn">Shop ▼</a>
+      <a href="404.html" class="dropbtn">Shop ▼</a>
       <div class="dropdown-content">
-        <a href="#">Products</a>
-        <a href="#">Categories</a>
-        <a href="#">Offers</a>
+        <a href="404.html">Products</a>
+        <a href="404.html">Categories</a>
+        <a href="404.html">Offers</a>
       </div>
     </div>
-    <a href="#">Elements</a>
+    <a href="404.html">Elements</a>
   </nav>
 
   <div class="icons">
@@ -71,7 +75,7 @@
       <p>
         Premium organic products for healthy skin & lifestyle.
       </p>
-      <a href="#" class="btn">READ MORE</a>
+      <a href="404.html" class="btn">READ MORE</a>
     </div>
   </div>
 
@@ -93,17 +97,17 @@
 </section> -->
 
 <!-- ===== IMAGE GRID ===== -->
-<section class="gallery">
+<section class="gallery" >
   <div class="card">
     <img src="https://images.unsplash.com/photo-1596755389378-c31d21fd1273" alt="Face Mask">
   </div>
 
-  <div class="card">
-    <img src="https://images.unsplash.com/photo-1556228724-4d3d07f21d13" alt="Lemon Skin Care">
+  <div class=" card">
+    <img src="leomon.webp">
   </div>
 
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9" alt="Makeup Brush">
+    <img src="3 rd.webp">
   </div>
 </section>
 
@@ -116,19 +120,19 @@
   <div class="product-grid">
 
     <!-- Product 1 -->
-    <div class="product-card">
-      <div class="img-box">
-        <img src="https://images.unsplash.com/photo-1611930022073-b7a4ba5fcccd?q=80&w=600" alt="">
+    <!-- <div class="product-card">
+        <div class="img-box fade-in">
+        <img src="face.webp" alt="">
       </div>
       <span class="cat">WOMAN</span>
       <h3>Olive Soap</h3>
       <p class="price">$5.00</p>
-    </div>
+    </div> -->
 
     <!-- Product 2 -->
     <div class="product-card">
       <div class="img-box overlay">
-        <img src="https://images.unsplash.com/photo-1615485925600-97237c4fc1ec?q=80&w=600" alt="">
+        <img src="salt.webp" alt="">
         <button class="cart-btn">ADD TO CART</button>
       </div>
       <span class="cat">WOMAN</span>
@@ -139,7 +143,7 @@
     <!-- Product 3 -->
     <div class="product-card">
       <div class="img-box">
-        <img src="https://images.unsplash.com/photo-1585238342028-4bbc43e799ba?q=80&w=600" alt="">
+        <img src="oil.webp" alt="">
       </div>
       <span class="cat">WOMAN</span>
       <h3>Olive Oil</h3>
@@ -149,11 +153,52 @@
     <!-- Product 4 -->
     <div class="product-card">
       <div class="img-box">
-        <img src="https://images.unsplash.com/photo-1585652757141-8837d86d4f88?q=80&w=600" alt="">
+        <img src="bro.webp" alt="">
       </div>
       <span class="cat">WOMAN</span>
       <h3>Bronzer</h3>
       <p class="price">$15.00</p>
+    </div>
+
+    <!-- Product 5 -->
+    <div class="product-card">
+      <div class="img-box">
+        <img src="face.webp" alt="Herbal Face Cream">
+      </div>
+      <span class="cat">ORGANIC</span>
+      <h3>Herbal Face Cream</h3>
+      <p class="price">$18.00</p>
+    </div>
+
+    <!-- Product 6 -->
+    <!-- <div class="product-card">
+      <div class="img-box overlay">
+        <img src="aloe.webp" alt="Aloe Vera Gel">
+        <button class="cart-btn">ADD TO CART</button>
+      </div>
+      <span class="cat">ORGANIC</span>
+      <h3>Aloe Vera Gel</h3>
+      <p class="price">$12.00</p>
+    </div> -->
+
+    <!-- Product 7 -->
+    <div class="product-card">
+      <div class="img-box">
+        <img src="rose.png" alt="Rose Water Toner">
+      </div>
+      <span class="cat">BEAUTY</span>
+      <h3>Rose Water Toner</h3>
+      <p class="price">$10.00</p>
+    </div>
+
+    <!-- Product 8 -->
+    <div class="product-card">
+      <div class="img-box">
+        <img src="cocunet.webp" alt="Coconut Hair Oil">
+      </div>
+      <span class="cat">BEAUTY</span>
+      <h3>Coconut Hair Oil</h3>
+      <p class="price">$14.00</p>
     </div>
 
   </div>
@@ -184,6 +229,45 @@
         <h3>Premium Quality</h3>
         <p>High-quality products that deliver real results for your skin and health.</p>
       </div>
+    </div>
+  </div>
+</section>
+
+<!-- ================= TESTIMONIALS ================= -->
+<section class="testimonials">
+  <div class="container">
+    <h2>What Our Customers Say</h2>
+    <div class="testimonial-grid">
+      <div class="testimonial">
+        <p>“Absolutely love the organic face cream! My skin feels so fresh and healthy.”</p>
+        <cite>– Priya S.</cite>
+      </div>
+      <div class="testimonial">
+        <p>“The Himalayan salt is a game changer for my bath routine. Highly recommend!”</p>
+        <cite>– Ayesha K.</cite>
+      </div>
+      <div class="testimonial">
+        <p>“I appreciate the eco-friendly packaging and cruelty-free promise. Will shop again!”</p>
+        <cite>– Ritu M.</cite>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ================= ABOUT SECTION ================= -->
+<section class="about">
+  <div class="container">
+    <div class="about-content">
+      <h2>About Dalia Organic Beauty</h2>
+      <p>
+        Dalia is dedicated to providing the finest organic and natural beauty products. Our mission is to empower you to embrace your natural beauty with products that are safe, effective, and environmentally responsible. We believe in transparency, sustainability, and the power of nature to nurture your skin and well-being.
+      </p>
+      <p>
+        All our products are carefully crafted with ethically sourced ingredients, free from harmful chemicals, and never tested on animals. Join us on a journey to radiant, healthy skin and a greener planet.
+      </p>
+    </div>
+    <div class="about-image">
+      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb" alt="About Dalia Organic Beauty">
     </div>
   </div>
 </section>
@@ -430,10 +514,10 @@
   </div> 
 
   <div class="social">
-    <a href="#"><i class="fab fa-facebook-f"></i> facebook</a>
-    <a href="#"><i class="fab fa-instagram"></i> instagram</a>
-    <a href="#"><i class="fab fa-twitter"></i> twitter</a>
-    <a href="#"><i class="fab fa-pinterest-p"></i> pinterest</a>
+    <a href="404.html"><i class="fab fa-facebook-f"></i> facebook</a>
+    <a href="404.html"><i class="fab fa-instagram"></i> instagram</a>
+    <a href="404.html"><i class="fab fa-twitter"></i> twitter</a>
+    <a href="404.html"><i class="fab fa-pinterest-p"></i> pinterest</a>
   </div>
 
   <!-- <div class="newsletter">
@@ -443,17 +527,17 @@
 
 
   <div class="footer-bottom">
-    <a href="#">HOME</a>
-    <a href="#">ABOUT</a>
-    <a href="#">PORTFOLIO</a>
-    <a href="#">BLOG</a>
-    <a href="#">SHOP</a>
-    <a href="#">HEALTH</a>
-    <a href="#">BEAUTY</a>
-    <a href="#">FAQ</a>
-    <a href="#">Contact</a>
-    <a href="#">Careers</a>
-    <a href="#">Sitemap</a>
+    <a href="404.html">HOME</a>
+    <a href="404.html">ABOUT</a>
+    <a href="404.html">PORTFOLIO</a>
+    <a href="404.html">BLOG</a>
+    <a href="404.html">SHOP</a>
+    <a href="404.html">HEALTH</a>
+    <a href="404.html">BEAUTY</a>
+    <a href="404.html">FAQ</a>
+    <a href="404.html">Contact</a>
+    <a href="404.html">Careers</a>
+    <a href="404.html">Sitemap</a>
   </div>
 <!-- 
   <div class="footer-more">
@@ -478,6 +562,12 @@
 </footer>
 
 <script src="home.js"></script>
+<script>
+// Preloader logic
+window.addEventListener('load', function() {
+  document.getElementById('preloader').style.display = 'none';
+});
+</script>
 </body>
 </html>
 
