--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   </div>
 </div>
 
+
 <!-- ================= HEADER ================= -->
 <header class="main-header">
   <div class="logo">
-    <img src="logo .webp" alt="Logo">
+    <img src="logo .webp" width="50px" height="40px" alt="Logo">
     <span class="logo-text">STACKLY</span>
   </div>
 
@@ -55,7 +56,7 @@
   <div class="overlay"></div>
   <div class="hero-content">
     <h1>Look & Feel Modern</h1>
-    <p>COSMETICS BY VIASUN</p>
+    <p>COSMETICS BY STACKLY</p>
   </div>
 </section>
 
@@ -80,8 +81,7 @@
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <link rel="stylesheet" href="style.css">
-</head>
-<body>
+
 
 <section class="about-section">
 
@@ -797,14 +797,14 @@
         <li><a href="404.html">Contact</a></li>
       </ul>
 
-      <h4>CUSTOMER SERVICE</h4>
-      <ul class="footer-links">
+      <!-- <h4>CUSTOMER SERVICE</h4> -->
+      <!-- <ul class="footer-links">
         <li><a href="404.html">Shipping Info</a></li>
         <li><a href="404.html">Returns & Exchanges</a></li>
         <li><a href="404.html">FAQ</a></li>
         <li><a href="404.html">Privacy Policy</a></li>
         <li><a href="404.html">Terms of Service</a></li>
-      </ul>
+      </ul> -->
     </div>
 
     <!-- RIGHT -->
