--- a/home2.html
+++ b/home2.html
@@ -13,9 +13,14 @@
 <body>
 <!-- Preloader -->
 <div id="preloader">
-  <div class="spinner"></div>
+  <div class="loader-box">
+    <div class="loader-logo">
+      <img src="logo .webp" alt="Logo">
+      <span class="loader-text">STACKLY</span>
+    </div>
+    <div class="loader"></div>
+  </div>
 </div>
-
 <!-- ================= HEADER ================= -->
 <header class="header">
   <div class="logo"><img src="logo .webp" alt="Logo"> STACKLY</div>
